# docs/swagger.yaml
@@ -23,6 +23,13 @@ definitions:
       rule_id:
         type: integer
     type: object
+  model.Email:
+    properties:
+      address:
+        type: string
+      id:
+        type: integer
+    type: object
   model.Function:
     properties:
       description:
@@ -56,6 +63,11 @@ definitions:
       ruleId:
         type: integer
     type: object
+  request.CreateEmailRequest:
+    properties:
+      address:
+        type: string
+    type: object
   request.CreateFunctionRequest:
     properties:
       description:
@@ -85,6 +97,13 @@ definitions:
       name:
         type: string
       ruleId:
+        type: integer
+    type: object
+  request.UpdateEmailRequest:
+    properties:
+      address:
+        type: string
+      id:
         type: integer
     type: object
   request.UpdateFunctionRequest:
@@ -304,6 +323,137 @@ paths:
           schema:
             $ref: '#/definitions/errcode.Error'
       summary: 获取所有聚合器
+  /api/email:
+    post:
+      parameters:
+      - description: 告警邮箱地址
+        in: body
+        name: address
+        schema:
+          type: string
+      - description: 新建告警邮箱测试
+        in: body
+        name: 测试
+        required: true
+        schema:
+          $ref: '#/definitions/request.CreateEmailRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 创建成功
+          schema:
+            $ref: '#/definitions/model.Email'
+        "400":
+          description: 请求错误
+          schema:
+            $ref: '#/definitions/errcode.Error'
+        "500":
+          description: 内部错误
+          schema:
+            $ref: '#/definitions/errcode.Error'
+      summary: 新增告警邮箱
+    put:
+      parameters:
+      - description: 告警邮箱 ID
+        in: body
+        name: id
+        schema:
+          type: integer
+      - description: 告警邮箱地址
+        in: body
+        name: address
+        schema:
+          type: string
+      - description: 更新告警邮箱测试
+        in: body
+        name: 测试
+        required: true
+        schema:
+          $ref: '#/definitions/request.UpdateEmailRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 更新成功
+          schema:
+            type: string
+        "400":
+          description: 请求错误
+          schema:
+            $ref: '#/definitions/errcode.Error'
+        "500":
+          description: 内部错误
+          schema:
+            $ref: '#/definitions/errcode.Error'
+      summary: 更新告警邮箱
+  /api/email/{id}:
+    delete:
+      parameters:
+      - description: 告警邮箱 ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 删除成功
+          schema:
+            type: string
+        "400":
+          description: 请求错误
+          schema:
+            $ref: '#/definitions/errcode.Error'
+        "500":
+          description: 内部错误
+          schema:
+            $ref: '#/definitions/errcode.Error'
+      summary: 删除告警邮箱
+    get:
+      parameters:
+      - description: 告警邮箱 ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 获取成功
+          schema:
+            $ref: '#/definitions/model.Email'
+        "400":
+          description: 请求错误
+          schema:
+            $ref: '#/definitions/errcode.Error'
+        "500":
+          description: 内部错误
+          schema:
+            $ref: '#/definitions/errcode.Error'
+      summary: 获取单个告警邮箱
+  /api/emails:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 获取成功
+          schema:
+            items:
+              $ref: '#/definitions/model.Email'
+            type: array
+        "400":
+          description: 请求错误
+          schema:
+            $ref: '#/definitions/errcode.Error'
+        "500":
+          description: 内部错误
+          schema:
+            $ref: '#/definitions/errcode.Error'
+      summary: 获取所有告警邮箱
   /api/function:
     post:
       parameters:
